--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Piedra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
 
 body {
   margin: 0;
@@ -20,7 +22,6 @@ code {
 font-family: 'Permanent Marker', cursive;
 font-family: 'Quicksand', sans-serif;
 font-family: 'Piedra', cursive;
-
-
+font-family: 'Architects Daughter', cursive;
 
 */
