--- a/src/components/MerchComp/elementDetails.css
+++ b/src/components/MerchComp/elementDetails.css
@@ -61,22 +61,16 @@ float: left;
 margin-left: 0%;
 }
 
-select{
+#item{
   width:28% ;
   height: 2em;
 }
 
-label{
+#labForProduct{
   width: 20%;
   margin-left: 0px;
 }
 
-a{
-  color: black;
-  text-decoration: none;
-  text-align: center;
-  
-}
 
 
 
@@ -91,7 +85,7 @@ a{
 }
 
 
-.abc{
+.back-page{
   display: flex;
   flex-direction: row;
   place-content: center;
