--- a/src/components/MerchComp/elementDetails.css
+++ b/src/components/MerchComp/elementDetails.css
@@ -2,17 +2,23 @@
 .head{
   width: 100%;
   height: 10em;
-  background-color: lightgrey;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 .footer{
+  border-top: solid black 1px;
   width: 100%;
   height: 10em;
-  background-color: lightgrey;
+  background-color: #F9F4F4;
   margin-top: 400px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .firstPart{
@@ -28,15 +34,14 @@ float: left;
   width: 150px;
   height: 150px;
   float: left;
-  margin-top: 200px;
-  margin-left: 100px;
+  margin-left: 175px;
   transition: 1.0s all ease-in-out; 
 
   
 } 
  
 .firstPart:hover img { 
-  transform: scale(2.2); 
+  transform: scale(1.5); 
 } 
 
 
@@ -48,14 +53,27 @@ height:auto;
 float: left;
 
 }
-
-.secondPart input{
-  width:50% ;
-  height:3em;
-  border-radius: 4px;
-  background-color:lightgreen;
+h3{
+  margin-left: 130px;
 }
 
+.secondPart input{
+  color: white;
+  width:250px ;
+  height:50px;
+  border-radius: 4px;
+  background-color:#289825;
+  opacity: 0.8;
+  margin-left: 100px;
+  border: none;
+  outline: none;
+  
+}
+
+
+.secondPart input:hover{
+  background-image: radial-gradient(circle, #007d6c, #008564, #008c56, #009342, #289825);
+}
 
 .secondPart p{
 margin-left: 0%;
@@ -64,6 +82,8 @@ margin-left: 0%;
 #item{
   width:28% ;
   height: 2em;
+  margin-left: 85px;
+
 }
 
 #labForProduct{
@@ -80,7 +100,9 @@ margin-left: 0%;
   height: 25px;
   margin-top: 21px;
   margin-right: 5px;
- 
+  display: flex;
+  justify-content: center;
+  align-items: center;
  
 }
 
