--- a/src/components/MerchComp/elementDetails.css
+++ b/src/components/MerchComp/elementDetails.css
@@ -92,3 +92,50 @@ margin-left: 0%;
   cursor: pointer;
 }
 
+
+
+  .buttonStyle {
+  backface-visibility: hidden;
+  position: relative;
+  cursor: pointer;
+  width:33%;
+  display: inline-block;
+  white-space: nowrap;
+  background: linear-gradient(180deg,#ce8 0%,#592 100%);
+  border-radius: 100px;
+  border: 0.5px solid #8c4;
+  border-width: 0.5px 0.5px 0.5px 0.5px;
+  padding: 7px 40px 9px 15px;
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,0.6),0px 1px 2px rgba(0,0,0,0.5);
+    color: #372;
+  font-size: 14px;
+  font-family: Helvetica Neue;
+  font-weight: 900;
+  font-style: normal;
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.5)
+  }
+  .buttonStyleDiv {
+  color: #372;
+  font-size: 10px;
+  font-family: transcript;
+  font-weight: 200;
+  font-style: italic;
+  text-align: center;
+  margin: -3px 0px 0px 0px
+  }
+  .buttonStyleI{
+  width: 12px;
+  height: 12px;
+  color: #372;
+  font-size: 1.1em;
+  background: #fff;
+  border-radius: 100px;
+  border: 3px solid #371;
+  border-width: 3px 3px 3px 3px;
+  padding: 7px 7px 7px 7px;
+  margin: 0px 0px 0px 0px;
+  position: absolute;
+  top: 0px;
+  right: 0px
+  }
+ 
