--- a/src/components/ArenaComp/FogStyle/fog.css
+++ b/src/components/ArenaComp/FogStyle/fog.css
@@ -6,7 +6,7 @@ body {
 body {
   background: #000;
   background: rgba(0, 0, 0, 1);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .fogwrapper {
