--- a/src/components/ArenaComp/FogStyle/fog.css
+++ b/src/components/ArenaComp/FogStyle/fog.css
@@ -4,8 +4,8 @@ body {
   padding: 0;
 }
 body {
-  background: #000;
-  background: rgba(0, 0, 0, 1);
+  /* background: #000;
+  background: rgba(0, 0, 0, 1); */
   /* overflow: hidden; */
 }
 
