--- a/src/components/MerchComp/elementDetails.css
+++ b/src/components/MerchComp/elementDetails.css
@@ -117,7 +117,7 @@ margin-left: 0%;
   backface-visibility: hidden;
   position: relative;
   cursor: pointer;
-  width:33%;
+  width:20em;
   display: inline-block;
   white-space: nowrap;
   background: linear-gradient(180deg,#ce8 0%,#592 100%);
@@ -131,7 +131,8 @@ margin-left: 0%;
   font-family: Helvetica Neue;
   font-weight: 900;
   font-style: normal;
-  text-shadow: 0px 1px 0px rgba(255,255,255,0.5)
+  text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+  outline:none;
   }
   .buttonStyleDiv {
   color: #372;
